[gd_scene load_steps=13 format=2]

[ext_resource path="res://Engine/Stations/MapMachine/MapDisplay.gd" type="Script" id=1]
[ext_resource path="res://Engine/Stations/MapMachine/lanetta_map_display.png" type="Texture" id=2]
[ext_resource path="res://Engine/Fonts/DOS.tres" type="DynamicFont" id=3]
[ext_resource path="res://Engine/Stations/MapMachine/map_machine_display_overlay.png" type="Texture" id=4]
[ext_resource path="res://Engine/AnimateSpritesheet.gd" type="Script" id=5]
[ext_resource path="res://Engine/Stations/MapMachine/map_you_location.png" type="Texture" id=6]
[ext_resource path="res://Engine/Stations/MapMachine/map_malus_location.png" type="Texture" id=7]
[ext_resource path="res://Effects/Shaders/screenspace_crt_distortion.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/range = Vector2( 0, 0.053 )
shader_param/speed = 0.8
shader_param/color_speed = 2.0
shader_param/offset = 0.005
shader_param/col_subt_max_val = 0.03

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/LoginScreen/Header:max_lines_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/LoginScreen/Login:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/LoginScreen/ok:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/LoginScreen/Header:lines_skipped")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/LoginScreen/Login:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/DisplayedMap:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 3.03143, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 360, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ Vector2( 360, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/LoginScreen/Header:max_lines_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/LoginScreen/Login:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/DisplayedMap:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MapDisplay" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 38.0
margin_top = -2.0
margin_right = 340.0
margin_bottom = 221.0
color = Color( 0.172549, 0.0745098, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayedMap" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2( 192, 108 )

[node name="MapDisplayed" type="Sprite" parent="CanvasLayer/DisplayedMap"]
texture = ExtResource( 2 )

[node name="map_you_location" type="Sprite" parent="CanvasLayer/DisplayedMap"]
texture = ExtResource( 6 )
hframes = 3
script = ExtResource( 5 )
anim_speed = 10.0

[node name="map_malus_location" type="Sprite" parent="CanvasLayer/DisplayedMap"]
position = Vector2( 18, -65 )
texture = ExtResource( 7 )
hframes = 3
script = ExtResource( 5 )
anim_speed = 10.0

[node name="LoginScreen" type="Node2D" parent="CanvasLayer"]
position = Vector2( 192, 108 )

[node name="Header" type="Label" parent="CanvasLayer/LoginScreen"]
margin_left = -140.0
margin_top = -101.0
margin_right = 140.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.705882, 0.164706, 1 )
text = "//MapOS//

Login Required
------------------------------


Username:[                 ]
Password:[                 ]"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Label" parent="CanvasLayer/LoginScreen"]
margin_left = -38.0
margin_top = 12.0
margin_right = 263.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.870588, 0.662745, 0.152941, 1 )
text = "gamercat_xX
***************** ***"
autowrap = true
percent_visible = 0.0

[node name="ok" type="Label" parent="CanvasLayer/LoginScreen"]
visible = false
margin_left = -50.0
margin_top = 62.0
margin_right = 55.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.705882, 0.164706, 1 )
text = "OK
"
align = 1
valign = 1
autowrap = true

[node name="DisplayBorder" type="Sprite" parent="CanvasLayer"]
texture = ExtResource( 4 )
centered = false

[node name="DistortionRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 1 )
margin_left = 53.0
margin_right = 331.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/log_in = SubResource( 2 )
anims/turn_off = SubResource( 3 )
anims/turn_on = SubResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
